third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_no_args.exp

Diagnostics:
error: the function takes 2 arguments but 0 were provided
  ┌─ tests/checking/typing/v1-signer/move_to_no_args.move:4:9
  │
4 │         move_to<R>();
  │         ^^^^^^^^^^^^

error: the function takes 2 arguments but 0 were provided
   ┌─ tests/checking/typing/v1-signer/move_to_no_args.move:12:14
   │
12 │         () = move_to<R<bool>>();
   │              ^^^^^^^^^^^^^^^^^^
